kubecost/templates/prometheus-authenticator/envoy-cm.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: prometheus-authenticator
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 9090
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                    codec_type: auto
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      request_headers_to_add:
                        - header:
                            key: "Authorization"
                            value: "Basic aW50ZXJuYWw6V0gyRGZNUGZFOVdGazZoRA=="
                      virtual_hosts:
                        - name: service
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: local_service
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config: {}
      clusters:
        - name: local_service
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
            cluster_name: local_service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: prometheus-os2-cluster-config.os2-cluster-config-monitoring-prod.svc
                          port_value: 9093
          tls_context:
            sni: prometheus-os2-cluster-config.os2-cluster-config-monitoring-prod.svc
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
